--- a/lib/Sass/partial/_icons.scss
+++ b/lib/Sass/partial/_icons.scss
@@ -57,8 +57,8 @@
 .icon-search:before {
   content: "\e902";
 }
-.icon-eye:before {
-  content: "\e903";
+.icon-loader:before {
+  content: "\e90f";
 }
 .icon-circle-plus:before {
   content: "\e90e";
