fix feature picking

--- a/lib/Sass/global/_variables.scss
+++ b/lib/Sass/global/_variables.scss
@@ -21,6 +21,7 @@ $font-size-mini: 0.8rem;
 
 $work-bench-width : 350px;
 $setting-panel: 300px;
+$feature-info-panel-width: 500px;
 
 $border-color: rgba(#fff, 0.2);
 
