--- a/lib/Sass/partial/_map_navigation.scss
+++ b/lib/Sass/partial/_map_navigation.scss
@@ -1,13 +1,19 @@
 $ring-width: 10px;
 $compass-width: 90px;
 
+// Map vaigation control
+//
+// Style guide: 6.0
+
+//Map Compass
+//
+// Markup:
+// <div class="compass"><div class="compass-outer-ring"></div><div class="compass-inner-ring" title="Click and drag to rotate the camera"></div><div class="compass-rotation-marker"></div></div>
+//
+// Style guide: 6.1
+
 .compass{
   cursor: default;
-  position: fixed;
-  right: $padding;
-  top: 75px;
-  width: $compass-width;
-  height: $compass-width;
   .compass-outer-ring{
     background-image: url('./TerriaJS/images/compass-outer.svg');
     height: $compass-width;
@@ -44,13 +50,17 @@ $compass-width: 90px;
   }
 }
 
+//Map Zoom Control
+//
+// Markup:
+// <div class="zoom-control"><ul class="list-reset"><li><button class="btn zoom-increarse" title="zoom in"><i class="icon icon-zoom-in"></i></button></li><li><button class="btn zoom-decrease" title="reset zoom"><i class="icon icon-refresh"></i></button></li><li><button class="btn zoom-decrease" title="zoom out"><i class="icon icon-zoom-out"></i></button></li></ul></div>
+//
+// Style guide: 6.2
+
 .zoom-control{
   background: #fff;
+  color: #000;
   width: 30px;
-  position: absolute;
-  //temp
-  right: 30px;
-  top: 200px;
   border-radius: 100px;
   border: 2px solid #000;
   text-align: center;
