--- a/lib/Sass/partial/_now_viewing.scss
+++ b/lib/Sass/partial/_now_viewing.scss
@@ -1,4 +1,51 @@
 $now-viewing-margin: 5px;
+
+// Now viewing
+//
+// .is-open - now viewing open state
+//
+// Markup:
+// <ul class='now-viewing__content list-reset'>
+// <li class="now-viewing__item clearfix {{modifier_class}}">
+//   <button class="btn block now-viewing__item-title">Broadband ADSL Availability</button>
+//   <div class="now-viewing__item-inner">
+//     <ul class="list-reset flex clearfix now-viewing__item-control">
+//       <li class="zoom">
+//         <button title="Zoom in data" class="btn">Zoom To</button>
+//       </li>
+//       <li class="info">
+//         <button class="btn undefined">info</button>
+//       </li>
+//       <li class="remove">
+//         <button title="Remove this data" class="btn">Remove</button>
+//       </li>
+//       <li class="visibility">
+//         <button title="Data show/hide" class="btn">
+//         <i class="icon icon-eye"></i>
+//         </button>
+//       </li>
+//     </ul>
+//     <div class="now-viewing__item-opacity">
+//       <label for="opacity">Opacity: </label>
+//       <input type="range" name="opacity" min="0" max="1" step="0.01" value="0.6">
+//     </div>
+//     <div class="now-viewing__item-legend">
+//       <a href="https://programs.communications.gov.au/geoserver/ows?service=WMS&amp;version=1.3.0&amp;request=GetLegendGraphic&amp;format=image/png&amp;layer=mybroadband:MyBroadband_ADSL_Availability" data-reactid=".1.1.2.$0.1.2.0">
+//       <img src="https://programs.communications.gov.au/geoserver/ows?service=WMS&amp;version=1.3.0&amp;request=GetLegendGraphic&amp;format=image/png&amp;layer=mybroadband:MyBroadband_ADSL_Availability" data-reactid=".1.1.2.$0.1.2.0.0">
+//       </a>
+//     </div>
+//   </div>
+// </li>
+// </ul>
+//
+// Style guide: 8.0
+
+.kss-modifier__example{
+  .now-viewing__item{
+    width: 300px;
+  }
+}
+
 .now-viewing{
   margin-top: $now-viewing-margin;
 
