--- a/lib/Sass/partial/_layout.scss
+++ b/lib/Sass/partial/_layout.scss
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   width: $work-bench-width;
   display: none;
-  @include transition(margin 0.5s linear);
+  @include transition(margin 0.05s ease-in);
   @media(screen and min-width: $sm){
     //temp
     display: block;
@@ -20,7 +20,7 @@
   right: 0;
   left: 0;
   height: 100vh;
-  @include transition(left 0.5s linear);
+  @include transition(left 0.05s ease-in);
   canvas{
     width: 100%;
     height: 100%;
