share panel init

--- a/lib/Sass/partial/_labels.scss
+++ b/lib/Sass/partial/_labels.scss
@@ -6,7 +6,8 @@
   margin: 5px 0;
 }
 
-.setting-panel__label{
+.setting-panel__label, .share-panel__label{
   display: block;
   padding-bottom: $padding;
 }
+
