--- a/lib/Views/CatalogItemInfo.html
+++ b/lib/Views/CatalogItemInfo.html
@@ -102,6 +102,15 @@
                     <div><a data-bind="attr: { href: catalogItem.dataUrl }, text: catalogItem.dataUrl" target="_blank"></a></div>
                 </div>
             </div>
+            <div class="catalog-item-info-section" data-bind="if: catalogItem.dataUrlType === 'wcs' || catalogItem.dataUrlType === 'wcs-complete'">
+                <h2>Data URL</h2>
+                <div class="catalog-item-info-description">
+                    Use the link below to download the data.  See the
+                    <a href="http://docs.geoserver.org/latest/en/user/services/wcs/reference.html" target="_blank">Web Coverage Service (WCS) documentation</a>
+                    for more information on customising URL query parameters.
+                    <div><a data-bind="attr: { href: catalogItem.dataUrl }, text: catalogItem.dataUrl" target="_blank"></a></div>
+                </div>
+            </div>
             <div class="catalog-item-info-section" data-bind="if: catalogItem.dataUrlType === 'direct'">
                 <h2>Data URL</h2>
                 <div class="catalog-item-info-description">
