--- a/lib/Views/CatalogItemInfo.html
+++ b/lib/Views/CatalogItemInfo.html
@@ -80,7 +80,7 @@
                 </p>
 
                 <input class="catalog-item-info-baseUrl" readonly type="text" data-bind="value: catalogItem.url" size="80" onclick="this.select();" />
-                <p class="catalog-item-info-description" data-bind="if: catalogItem.type === 'wms' || catalogItem.type === 'esri-mapServer'">
+                <p class="catalog-item-info-description" data-bind="if: catalogItem.type === 'wms' || (catalogItem.type === 'esri-mapServer' && typeof catalogItem.layers !== 'undefined'">
                     Layer name:
                     <span class="catalog-item-info-tech-attributes" data-bind="text: catalogItem.layers"></span>
                 </p>
