--- a/lib/Sass/partial/_modal_window.scss
+++ b/lib/Sass/partial/_modal_window.scss
@@ -7,7 +7,7 @@
   background: #fff;
   color: #000;
   max-height: 80vh;
-  overflow-y: auto;
+  overflow: none;
   position: relative;
   width: 1000px;
   max-width: 95%;
