remove compass on leaflet

--- a/lib/Sass/partial/_modal_window.scss
+++ b/lib/Sass/partial/_modal_window.scss
@@ -63,6 +63,10 @@
   }
 }
 
+.terria-preview{
+  height: 200px;
+}
+
 .data-preview-action{
    -webkit-flex-direction: row;
    flex-direction: row;
