Wrap legend images in a div and give the image a white background so that we can see transparent legends.

--- a/lib/Styles/NowViewingTab.less
+++ b/lib/Styles/NowViewingTab.less
@@ -145,6 +145,10 @@
     max-width: @explorer-panel-width - 56px;
 }
 
+.now-viewing-legend-image-background {
+    background-color: white;
+}
+
 .now-viewing-item-opacity {
     padding-left: 15px;
     padding-top: 10px;
