--- a/lib/Sass/partial/_work_bench.scss
+++ b/lib/Sass/partial/_work_bench.scss
@@ -10,6 +10,12 @@
   background-repeat: no-repeat;
   background-size: cover;
 
+  .btn{
+    &:hover{
+      color: $color-primary;
+    }
+  }
+
   h1{
     margin: 0;
   }
