search data link

--- a/lib/Sass/partial/_work_bench.scss
+++ b/lib/Sass/partial/_work_bench.scss
@@ -10,7 +10,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-  .btn{
+  button.btn{
     &:hover{
       color: $color-primary;
     }
