bg to data catalog group

--- a/lib/Sass/global/_variables.scss
+++ b/lib/Sass/global/_variables.scss
@@ -17,6 +17,8 @@ $dark-lighter: #595B60;
 
 $grey-lighter: #ddd;
 
+$faint-bg: #f5f5f5;
+
 $font-size-base: 1rem;
 $font-size-small: 0.95rem;
 $font-size-mini: 0.8rem;
