Translation test task using https://github.com/Innovisite/gulp-gettext-static-tags

--- a/lib/Views/AddDataPanel.html
+++ b/lib/Views/AddDataPanel.html
@@ -37,7 +37,7 @@
 
                 <p><strong>- OR -</strong></p>
 
-                Enter the URL of the data file or web service:
+                @<<ADD_URL>>@
                 <div class="add-data-url-input-holder">
                     <div class="input-group">
                         <input class="add-data-url-input" type="text" placeholder="e.g. http://data.gov.au/geoserver/wms" data-bind="value: url" />
@@ -47,7 +47,7 @@
                     </div>
 
                 <div class="add-data-tip">
-                    <strong>TIP:</strong> you can also drag data files directly onto the map.
+                    @<<ADD_INFO_FILE>>@
                 </div>
             </form>
         </div>
