--- a/lib/Views/OpacitySection.html
+++ b/lib/Views/OpacitySection.html
@@ -1,4 +1,8 @@
 <div class="now-viewing-item-opacity">
-    OPACITY: <span data-bind="text: Math.round(catalogMember.opacity * 100) + '%'"></span>
-    <input class="now-viewing-opacity-slider" type="range" min="0" max="1" step="0.01" data-bind="value: catalogMember.opacity, valueUpdate: 'input', attr: {tabindex: nowViewingTab.isActive ? 0 : -1 }" />
+  OPACITE: <select style="display: inline-block;" data-bind="options: opacityChoices,
+			      optionsText: function(item) {
+			        return Math.round(item * 100) + '%';
+			      },
+			      value: catalogMember.opacity"></select>
+    <input class="now-viewing-opacity-slider" type="range" min="0" max="1" step="0.1" data-bind="value: catalogMember.opacity, valueUpdate: 'input', attr: {tabindex: nowViewingTab.isActive ? 0 : -1 }" />
 </div>
